[gd_scene load_steps=3 format=2]

[ext_resource path="res://HKMap.jpg" type="Texture" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]

[node name="Main" type="Control"]
margin_right = 6747.0
margin_bottom = 4727.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Left" type="Control" parent="CanvasLayer"]
anchor_bottom = 1.0
margin_right = 160.0
mouse_filter = 1

[node name="Right" type="Control" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -160.0
mouse_filter = 1

[node name="Top" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
margin_bottom = 150.0
mouse_filter = 1

[node name="Bottom" type="Control" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -150.0
mouse_filter = 1

[node name="Exit" type="Button" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -132.0
margin_bottom = 43.0
text = "X"
flat = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_right = 6747
limit_bottom = 4727
smoothing_enabled = true
smoothing_speed = 10.0

[connection signal="mouse_entered" from="TextureRect" to="." method="_on_TextureRect_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect" to="." method="_on_TextureRect_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/Left" to="." method="_on_Left_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Left" to="." method="_on_Left_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/Right" to="." method="_on_Right_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Right" to="." method="_on_Right_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/Top" to="." method="_on_Top_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Top" to="." method="_on_Top_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/Bottom" to="." method="_on_Bottom_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Bottom" to="." method="_on_Bottom_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Exit" to="." method="_on_Exit_pressed"]
